[#74] Refactor: 하이 목록 조회할때 token을 사용한 userId를 통해 조회하도록 수정