@@ -4,15 +4,18 @@ import com.gdg.z_meet.domain.meeting.dto.MeetingRequestDTO;
 import com.gdg.z_meet.domain.meeting.dto.MeetingResponseDTO;
 import com.gdg.z_meet.domain.meeting.entity.Hi;
 import com.gdg.z_meet.domain.meeting.entity.Team;
+import com.gdg.z_meet.domain.meeting.entity.UserTeam;
 import com.gdg.z_meet.domain.meeting.entity.status.HiStatus;
 import com.gdg.z_meet.domain.meeting.repository.HiRepository;
 import com.gdg.z_meet.domain.meeting.repository.TeamRepository;
+import com.gdg.z_meet.domain.meeting.repository.UserTeamRepository;
 import com.gdg.z_meet.global.exception.BusinessException;
 import com.gdg.z_meet.global.response.Code;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.security.GeneralSecurityException;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -26,6 +29,7 @@ public class HiQueryServiceImpl implements HiQueryService{
     private final HiRepository hiRepository;
     private final TeamRepository teamRepository;
     private final MeetingQueryServiceImpl meetingQueryService;
+    private final UserTeamRepository userTeamRepository;
 
     // 공통 메서드로 분리
     public Map<String, Team> assignTeams(List<Long> teamIds, Long fromId) {
@@ -96,24 +100,34 @@ public class HiQueryServiceImpl implements HiQueryService{
 
     @Override
     @Transactional
-    public List<MeetingResponseDTO.hiListDto> checkHiList(Long teamId, String action){
+    public List<MeetingResponseDTO.hiListDto> checkHiList(Long userId, String action){
+        List<UserTeam> myTeams = userTeamRepository.findByUserId(userId);
+        if(myTeams.size()==0) throw new BusinessException(Code.TEAM_NOT_FOUND);
+        List<Long> myTeamIds = myTeams.stream()
+                .map(userTeam -> userTeam.getTeam().getId()) // UserTeam에서 teamId 추출
+                .collect(Collectors.toList());
+        System.out.println(myTeamIds);
+
         List<Hi> hiList;
         List<Long> teamIds;
         if(action.equals("Receive")) {
-            hiList = hiRepository.findRecevieHiList(teamId);
+            hiList = hiRepository.findRecevieHiList(myTeamIds);
             teamIds = hiList.stream()
                     .map(hi -> hi.getFrom().getId()) // 보낸 팀의 id
-                    .collect(Collectors.toList());
+                    .collect(Collectors.toSet()) // 중복 제거
+                    .stream().toList();
         }
         else{
-            hiList = hiRepository.findSendHiList(teamId);
+            hiList = hiRepository.findSendHiList(myTeamIds);
             teamIds = hiList.stream()
                     .map(hi -> hi.getTo().getId())
-                    .collect(Collectors.toList());
+                    .collect(Collectors.toSet())
+                    .stream().toList();
         }
 
         List<Team> teamList = teamRepository.findByIdIn(teamIds);
         System.out.println("TeamList: "+teamList);
+        System.out.println("hiList "+ hiList);
 
         Map<Long, List<String>> emojiList = meetingQueryService.collectEmoji(teamList);
         Map<Long, List<String>> majorList = meetingQueryService.collectMajor(teamList);
